corrected sizing of logo on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3924,6 +3924,10 @@
 					font-size: 1em;
 				}
 
+                #intro img {
+                    width: 100%;
+                    height: 100%;
+                }
 			}
 
 		@media screen and (max-width: 1280px) {
